# gallTFT

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
src/: config.h  main.cpp  utils.cpp  utils.h
